<?xml version="1.0"?>
<package format="3">
  <name>netft_utils</name>
  <version>0.0.0</version>
  <description>C++ class and ROS node for ATI force/torque sensors connected to a Netbox. Includes
    gravity compensation and transformations.</description>

  <author email="alexvs@utexas.edu">Alex von Sternberg</author>
  <author>Derek King</author>
  <author>Andy Zelenak</author>

  <maintainer email="adam.pettinger@tamu.edu">Adam Pettinger</maintainer>
  <maintainer email="ianl@tamu.edu">Ian Lansdowne</maintainer>
  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <url type="website">http://wiki.ros.org/netft_utils</url>

  <license>BSD-3-Clause</license>


  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>netft_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>tf2</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
